# theatre

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  logger.py  main.py  pyproject.toml  requirements.txt  tox.ini
tests/: sample_charm.py  test_repo_tools.py  test_theatre_init.py
theatre/: charm_repo_tools.py  config.py  context_loader.py  helpers.py  logger.py  main.py  main_window.py  scenario_json.py  theatre_scene.py  trace_inspector.py
theatre/dialogs/: context_loader.py  edit_delta.py  event_dialog.py  file_backed_edit_dialog.py  new_state.py  relation_picker.py
theatre/resources/: edit_state_template.py  new_state_template.py
theatre/resources/subtrees/: bare_startup_sequence.theatre  bare_teardown_sequence.theatre  test_linear_subtree.theatre
theatre/resources/subtrees/dynamic/: relation_lifecycle.theatre
theatre/resources/templates/: delta_template.py  edit_state_template.py  loader_template.py  new_state_template.py
theatre/trace_tree_widget/: conf.py  delta.py  drag_listbox.py  event_dialog.py  event_edge.py  library_widget.py  new_state_dialog.py  node_editor_widget.py  scenario_interface.py  state_bases.py  state_node.py  structs.py  trace_tree_editor_widget.py  utils.py
ui/: actions.py  helpers.py  main_window.py  theatre_scene.py  trace_inspector.py
ui/trace_tree_widget/: conf.py  drag_listbox.py  event_dialog.py  event_edge.py  state_node.py  sub_window.py  trace_tree_editor_widget.py
